# solana-gamefi

./: .env  .env.example  .gitignore  App.tsx  LICENSE  README.md  app.json  package-lock.json  package.json
anchor/: .gitignore  Anchor.toml  package-lock.json
anchor/programs/clashgo/: Cargo.toml
anchor/programs/clashgo/src/: lib.rs
anchor/tests/: battle-cards-game.ts  clashgo.ts  quick-test.ts  simple-test.ts
android/: settings.gradle
android/app/: build.gradle
public/: project.md
src/: polyfills.ts
src/components/: ActiveFightView.tsx  AttackEffect.tsx  BattleAudio.tsx  BattlefieldSelector.tsx  ComboDisplay.tsx  ConfirmDialog.tsx  ConnectButton.tsx  DamageNumber.tsx  FighterCharacter.tsx  GameCard.tsx  LoadingScreen.tsx  OptimizedImage.tsx  StatCard.tsx  Toast.tsx
src/config/: env.ts
src/constants/: index.ts
src/context/: FightContext.tsx  GameContext.tsx  ToastContext.tsx  WalletContext.tsx
src/data/: fighters.ts  quizQuestions.json
src/hooks/: useWallet.ts
src/idl/: battle_cards_game.json
src/navigation/: AppNavigator.tsx
src/screens/: BattleScreen.tsx  CollectionScreen.tsx  FightScreen.tsx  FighterCollectionScreen.tsx  HomeScreen.tsx  LeaderboardScreen.tsx  MysteryBoxScreen.tsx  PredictionScreen.tsx  ProfileScreen.tsx  QuizScreen.tsx  RewardsScreen.tsx  ShopScreen.tsx  StreakScreen.tsx
src/services/: anchorService.ts  blockchain.ts  cardService.ts  fightService.ts  fighterService.ts  gameService.ts  localStatsService.ts  localStreakService.ts  quizService.ts  streakService.ts
src/types/: index.ts
src/utils/: helpers.ts  (+1 more)
(+12 files in other folders)
